# coding-assistant

./: FRONTEND_CACHE_FIX.md  FRONTEND_IMPROVEMENTS.md  FRONTEND_TEST_CHECKLIST.md  MODEL_SWITCHING_GUIDE.md  RAG_IMPROVEMENTS_SUMMARY.md  README.md  TESTING.md  tests
.github/: copilot-instructions.md
backend/: .env.example  .gitignore  ANSWER_QUALITY_IMPROVEMENTS.md  DUPLICATE_SOURCES_FIX.md  INTEGRATION_SUMMARY.md  MODEL_CONFIGURATION.md  MODEL_UPDATE_SUMMARY.md  Makefile  QUICK_START.md  monitor_indexing.ps1  monitor_indexing.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  test_rag_improvements.py  test_rag_query.py  test_retrieval.py  test_session_conversation.py
backend/src/: __init__.py  config.py  main.py
backend/src/api/: __init__.py  chat.py  health.py  indexing.py  repositories.py  search.py  websocket.py
backend/src/services/: __init__.py  github_service.py  indexer_service.py  rag_service.py
backend/storage/metadata/: .gitkeep  a2a22b0a-f575-46da-b618-b146cd495b0a.json
backend/tests/e2e/: test_complete_workflow.py
backend/tests/integration/: test_repository_workflow.py  test_websocket_workflow.py
backend/tests/unit/: __init__.py  test_api_chat.py  test_api_health.py  test_api_indexing.py  test_api_repositories.py  test_api_search.py  test_github_service.py  test_indexer_service.py  test_models.py  test_rag_service.py  test_websocket.py
docs/: ACCESSIBILITY.md  API.md  CODELLAMA_SETUP.md  PERFORMANCE.md  RAG_SYSTEM_IMPROVEMENTS.md  SESSION_CONVERSATION_MANAGEMENT.md
frontend/: .env.example  .gitignore  .prettierignore  app.js  (+13 more)
(+18 files in other folders)
